[workspace]
members = ["packages/common", "packages/node", "packages/client", "tests"]

[workspace.package]
version = "0.0.1"
authors = ["Denis Lavrentev"]
license = "Apache-2.0-or-MIT"
edition = "2021"
repository = "https://github.com/defernus/pow_chain"
keywords = ["blockchain", "pow", "prof of work"]

[workspace.dependencies]
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0.105"
dotenvy = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"
sha256 = "1.4.0"
hex = "0.4.3"
rand = "0.8.5"

pow_common = { version = "0.0.1", path = "./packages/common" }
pow_tests = { version = "0.0.1", path = "./packages/tests" }
pow_node = { version = "0.0.1", path = "./packages/node" }
pow_client = { version = "0.0.1", path = "./packages/client" }


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false
