[package]
name = "pow_tests"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[dependencies]
pow_core = { workspace = true }
pow_node = { workspace = true }
pow_client = { workspace = true }
